source/main/resources/xenon.css
/* ... */
.splashscreen .progress-tray {
	-fx-fill: gray;
	-fx-opacity: 0.2;
}

.splashscreen .progress-incomplete {
	-fx-fill: -fx-accent;
	-fx-opacity: 0.4;
}

.splashscreen .progress-complete {
	-fx-fill: -fx-accent;
	-fx-opacity: 0.8;
}

/*******************************************************************************
 * Development Menu
 ******************************************************************************/
/* Not sure why the class selector does not work but the id selector does */
#menu-development {
	-fx-background-color: #ffff0030;
}

#menu-development > .label {
	-fx-text-fill: -fx-text-background-color;
}

#menu-development:hover {
	-fx-background-color: #ffff0040;
}

/*#menu-development:hover > .label {*/
/*	-fx-text-fill: -fx-text-background-color;*/
/*}*/

/*******************************************************************************
 * Workspace
 ******************************************************************************/
.workspace {
	/* Will override the user preference background */
	/*-fx-background-color: #80a0c0ff;*/
}

.workspace-tint {
	-fx-background-color: -ex-workspace-tint-color;
}

.workspace-search {
	-fx-pref-width: 15em;
}

/* Workspace Rails */
.workspace-rail-nw {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2.3em;
	-fx-min-height: 2px;
	-fx-cursor: nw-resize;
}

.workspace-rail-n {
	-fx-background-color: -ex-background-tabs;
	-fx-min-height: 2px;
	-fx-cursor: n-resize;
}

.workspace-rail-ne {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2.3em;
	-fx-min-height: 2px;
	-fx-cursor: ne-resize;
}

.workspace-rail-en {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-min-height: 2em;
	-fx-cursor: ne-resize;
}

.workspace-rail-e {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-cursor: e-resize;
}

.workspace-rail-es {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-min-height: 2em;
	-fx-cursor: se-resize;
}

.workspace-rail-se {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2.3em;
	-fx-min-height: 2px;
	-fx-cursor: se-resize;
}

.workspace-rail-s {
	-fx-background-color: -ex-background-tabs;
	-fx-min-height: 2px;
	-fx-cursor: s-resize;
}

.workspace-rail-sw {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2.3em;
	-fx-min-height: 2px;
	-fx-cursor: sw-resize;
}

.workspace-rail-wn {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-min-height: 2em;
	-fx-cursor: nw-resize;
}

.workspace-rail-w {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-cursor: w-resize;
}

.workspace-rail-ws {
	-fx-background-color: -ex-background-tabs;
	-fx-min-width: 2px;
	-fx-min-height: 2em;
	-fx-cursor: sw-resize;
}

/*******************************************************************************
 * Workarea
 ******************************************************************************/
.workarea-menu-bar {
	-fx-background-color: transparent;
	-fx-padding: 0;
	-fx-border: none;
}

.workarea-menu-item {
	/*-fx-background-color: blue;*/
}

.action-bar {
	-fx-background-color: -ex-background-tool;
	-fx-padding: 0em;
}

.action-bar .tool-bar {
	-fx-background-color: transparent;
}

.action-bar .stage-mover {
	-fx-background-color: transparent;
	-fx-pref-height: 1em;
	-fx-cursor: move;
}

.action-bar .button {
	-fx-background-color: transparent;
	-fx-background-insets: 0;
	-fx-padding: 0.333333em 0.333333em 0.333333em 0.333333em;
}

.action-bar .button:hover {
	-fx-background-color: -fx-selection-bar;
}

#menu-bar-program {
	-fx-background-color: transparent;
	-fx-padding: 0;
}

/* Program menu button */
#menu-button-menu {
	/* Remove the normal button background */
	-fx-background-color: transparent;
}

#menu-button-menu > .label {
	/* Change the normal menu button padding */
	-fx-padding: 0.333333em 0.333333em 0.333333em 0.333333em;
}

#menu-button-menu > .arrow-button {
	/* Hide the normal menu button arrow button area */
	-fx-padding: 0;
}

#menu-button-menu > .arrow-button > .arrow {
	/* Hide the normal menu button arrow */
	-fx-shape: null;
	-fx-padding: 0;
}

#menu-button-menu:hover {
	-fx-background-color: -fx-selection-bar; /* works */
}

#menu-button-menu:hover > .label {
	-fx-text-fill: -fx-focused-text-base-color; /* works */
}

/* Workarea menu button */
#menu-button-workarea {
	-fx-background-color: transparent;
}

#menu-button-workarea:hover {
	-fx-background-color: -fx-selection-bar;
}

#menu-button-workarea:hover > .label {
	-fx-text-fill: -fx-focused-text-base-color;
}

#menu-button-workarea:hover > .arrow-button > .arrow {
	-fx-background-color: -fx-focused-text-base-color;
}

/*******************************************************************************
 * Workpane List View
 ******************************************************************************/
.workpane .list-view {
	-fx-background-color: transparent;
}

/*******************************************************************************
 * Workpane Scroll Pane
 ******************************************************************************/
.workpane .scroll-pane {
	-fx-background-color: transparent;
}

.workpane .scroll-pane .viewport {
	-fx-background-color: transparent;
}

/*******************************************************************************
 * Workpane Table View
 ******************************************************************************/
.workpane .table-view {
	-fx-background-color: transparent;
}

.workpane .table-row-cell {
	/*-fx-background: -ex-background-tabs;*/
	-fx-background-color: transparent;
	-fx-padding: 0;
	-fx-text-fill: -fx-text-background-color;
}

.workpane .table-row-cell:odd {
	-fx-background-color: -ex-background-tool;
}

.workpane .table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected {
	-fx-background: -fx-selection-bar;
	-fx-table-cell-border-color: derive(-fx-selection-bar, 20%);
}
/* ... */

